Remake request and response structure. Added register and verify in client and server logic